@@ -11,12 +11,13 @@ wajig (2.8~pre) UNRELEASED; urgency=low
       package names
     - add -vv, which also searches long package descriptions and displays them;
       the former was available as -v, and the latter is new
+    - add debtags search; this happens if the string '::' is in the search term
   * SEARCH, INSTALL: fix weird bugs where package '0ad' could not be searched
     for or installed; LP #1182264
   * update TUTORIAL to reflect that allowing any case for commands has
     since been removed; LP #1033536
 
- -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Tue, 21 May 2013 23:51:55 +0200
+ -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Wed, 22 May 2013 20:46:42 +0200
 
 wajig (2.7.3) unstable; urgency=low
 
